applications/blog/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: website-blog-internal
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 31110
---
kind: Endpoints
apiVersion: v1
metadata:
  name: website-blog-internal
subsets:
  - addresses:
      # These ip address will not be used since all traffic will be redirect other domain.
      - ip: 10.0.0.107
      - ip: 10.0.0.191
    ports:
      - port: 31110
