applications/blog/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/permanent-redirect: https://openeuler.org/zh/blog.html
  name: blog-ingress
spec:
  tls:
    - hosts:
        - blog.openeuler.org
      secretName: blog-tls
  rules:
    - host: blog.openeuler.org
      http:
        paths:
          - backend:
              serviceName: website-blog-internal
              servicePort: 80
            path: /
